--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -79,7 +79,7 @@
   D.127.6. Numerical blabalysis}
 
 % Słowa kluczowe:
-\keywords{Rust, semantic versioning, continuous integration, cargo, crate}
+\keywords{Rust, semantic versioning, continuous integration, cargo}
 
 % Tu jest dobre miejsce na Twoje własne makra i~środowiska:
 \newtheorem{defi}{Definicja}[section]
