--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -252,7 +252,7 @@ The main usages of the tool are:
 and how that will benefit the Rust developers>
 
 
-\section{On-going plans to merge the tool into cargo}
+\subsection{On-going plans to merge the tool into cargo}
 
 <Here describe the existing plans to merge the project in which we're contributing
 to the official Rust toolchain and how that will benefit the Rust developers>
