Address final comment.

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -245,6 +245,10 @@ The main usages of the tool are:
 <Here describe the vision on how the tool should be automatically run in CI
 and how that will benefit the Rust developers>
 
+\subsection{Running in CI}
+
+<Here describe the vision on how the tool should be automatically run in CI
+and how that will benefit the Rust developers>
 
 \subsection{On-going plans to merge the tool into cargo}
 
