--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -151,7 +151,7 @@ A: "Rozwija pojęcia wstępne", czyli to, co nieoczywiste dla szarego człowieka
 
 
 
-\chapter{Basic definitions}\label{r:definitions}
+\chapter{Definitions}\label{r:definitions}
 
 \section{Rust language and cargo}
 
@@ -188,8 +188,13 @@ Cargo supports yanking releases from the registry.
 
 \chapter{State of the art}\label{r:stateoftheart}
 
-\section{How semantic versioning can go wrong (?)}
+\section{Difficulties of semantic versioning}
 
+<Above we explained what semver is, now explain what problems there are>
+
+<Why it is easy to break semver?>
+
+<Why people break semver?>
 
 \section{The consequences}
 
