English is hard...

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -188,7 +188,7 @@ Cargo supports yanking releases from the registry.
 
 \chapter{State of the art}\label{r:stateoftheart}
 
-\section{Difficulties of semantic versioning}
+\section{Difficulty of semantic versioning}
 
 <Above we explained what semver is, now explain what problems there are>
 
