Some more cosmetic renames.

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -188,15 +188,15 @@ Cargo supports yanking releases from the registry.
 
 \chapter{State of the art}\label{r:stateoftheart}
 
-\section{Difficulty of semantic versioning}
+\section{The difficulty of correctly using semver in Rust}
 
-<Above we explained what semver is, now explain what problems there are>
+<Above we explained what semver is, now explain in general what are the common difficulties and problems>
 
-<Why it is easy to break semver?>
+<Why is it easy to break semver?>
 
-<Why people break semver?>
+<Why people tend to break semver?>
 
-\section{The consequences}
+\section{Consequences of breaking semver}
 
 When a library maintainer breaks semver, for (...) reasons, the users' code stops compiling and (...)
 
