Corrections after 19.01 meeting v2 (#3)
* TINY changes.

* English is hard...

* Some more cosmetic renames.

Co-authored-by: Bartosz Smolarczyk <bs429594@students.mimuw.edu.pl>

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -151,7 +151,7 @@ A: "Rozwija pojęcia wstępne", czyli to, co nieoczywiste dla szarego człowieka
 
 
 
-\chapter{Basic definitions}\label{r:definitions}
+\chapter{Definitions}\label{r:definitions}
 
 \section{Rust language and cargo}
 
@@ -188,10 +188,15 @@ Cargo supports yanking releases from the registry.
 
 \chapter{State of the art}\label{r:stateoftheart}
 
-\section{How semantic versioning can go wrong (?)}
+\section{The difficulty of correctly using semver in Rust}
 
+<Above we explained what semver is, now explain in general what are the common difficulties and problems>
 
-\section{The consequences}
+<Why is it easy to break semver?>
+
+<Why people tend to break semver?>
+
+\section{Consequences of breaking semver}
 
 When a library maintainer breaks semver, for (...) reasons, the users' code stops compiling and (...)
 
