--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -120,7 +120,7 @@ without worrying about their app being broken by a dependency change.
 \addcontentsline{toc}{chapter}{Introduction}
 
 Rust is a relatively new language that has lately been gaining on popularity.
-Amongst its standard development toolchain is a software called cargo 
+Amongst its standard development toolchain there is a software called cargo 
 -- Rust's build system and package manager,
 which handles building a crate -- a package with Rust code.
 Amongst cargo's responsibilities is searching for the newest versions,
