--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -129,7 +129,7 @@ downloading and building dependencies
 
 Cargo assumes that all crates follow semantic versioning
 -- a set of rules that decide when it is safe to use the new version of a library
-without any problems (the codes that depend on this library must still compile).
+without any problems (the projects that depend on this library must still compile).
 Thanks to that, developers of libraries can release patches and bugfixes
 and cargo by default will automatically use those newest releases.
 The exact definition of semantic versioning is explained in chapter \ref{r:definitions}.
