--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -134,7 +134,7 @@ Thanks to that, developers of libraries can release patches and bugfixes
 and cargo by default will automatically use those newest releases.
 The exact definition of semantic versioning is explained in chapter \ref{r:definitions}.
 
-It turns out that it's not obvious which changes are backwards-compatible
+It turns out that it is not obvious which changes are backwards-compatible
 and which changes are not. There are a lot of examples (listed in \ref{r:semverisdifficult})
 where experienced Rust developers made a mistake 
 (due to insufficient knowledge about the language or by overlooking something)
