--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -140,7 +140,7 @@ where experienced Rust developers made a mistake
 (due to insufficient knowledge about the language or by overlooking something)
 that changed the public API of a library in such a way that users' code stopped compiling.
 
-In this thesis we're presenting our work on a tool to detect and notify about
+In this thesis we are presenting our work on a tool to detect and notify about
 a subset of problems that make Rust libraries' public API non-backwards compatible,
 with the goal of making problems with semantic versioning less frequent in the Rust community.
 The exact goals of this project are described in chapter \ref{r:vision}.
