--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -145,7 +145,7 @@ a subset of problems that make Rust libraries' public API non-backwards compatib
 with the goal of making problems with semantic versioning less frequent in the Rust community.
 The exact goals of this project are described in chapter \ref{r:vision}.
 
-The project is open-source -- all our work is visible in public repositories
+The project is open-source -- all of our work is visible in public repositories
 (listed in \ref{r:projectstructure}). The project existed before our contributions,
 thus chapter \ref{r:implementation} mainly describes how we've 
 been extending the project's functionalities and fixing its issues.
