--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -147,7 +147,7 @@ The exact goals of this project are described in chapter \ref{r:vision}.
 
 The project is open-source -- all of our work is visible in public repositories
 (listed in \ref{r:projectstructure}). The project existed before our contributions,
-thus chapter \ref{r:implementation} mainly describes how we've 
+thus chapter \ref{r:implementation} mainly describes how we have 
 been extending the project's functionalities and fixing its issues.
 Chapter \ref{r:summary} is a summary of our results and the project's impact 
 on the Rust community.
