--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -76,8 +76,8 @@
 %Klasyfikacja tematyczna wedlug AMS (matematyka) lub ACM (informatyka)
 \klasyfikacja{
   D. Software\\
-  % D.127. Blabalgorithms\\
-  % D.127.6. Numerical blabalysis
+  D.2. Software Engineering\\
+  D.2.4. Software/Program Verification
   }
 
 % Słowa kluczowe:
