--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -123,8 +123,8 @@ Rust is a relatively new language that has lately been gaining on popularity.
 Amongst its standard development toolchain there is a software called cargo 
 -- Rust's build system and package manager,
 which handles building a crate -- a package with Rust code.
-Amongst cargo's responsibilities is searching for the newest versions,
-downloading and building dependencies
+One of cargo's responsibilities is searching for the newest crate versions,
+downloading them and building dependencies
 (that is, other libraries / crates that the code uses).
 
 Cargo assumes that all crates follow semantic versioning
